# CloneAI

./: .gitignore  AUTOSTART.md  AUTOSTART_QUICK.md  COMMAND_CHAINING_FIX.md  DESKTOP_APP_SUMMARY.md  FIXES_SUMMARY.md  README.md  auto-start-scheduler.ps1  benchmark_ollama.py  clai.ps1  credentials1.json  ideas  pyproject.toml  requirements-macos.txt  requirements-voice.txt  requirements.txt  setup-clai.ps1  setup-clai.sh  setup-windows-task.ps1  show_build_messages_sample.py  start-scheduler.ps1  test_expansion.py  test_fixes.py  uninstall-autostart.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
agent/: README.md  cli.py  system_artifacts.py  system_info.py
docs/: ARCHITECTURE.md  ARCHITECTURE.md.backup  COMPLETE_GUIDE.md  DOCUMENTATION_GUIDE.md  EMAIL_IMPLEMENTATION.md  FLOW_OF_CONTROL.md  GMAIL_SETUP.md  MASTER.md  NL_FEATURES.md  PROPOSED_ARCHITECTURE.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_SUMMARY.md  TESTING.md  TIERED_ARCHITECTURE_EXPLAINED.md  TOKEN_TRACKING.md  VOICE_MODE.md  WORKFLOW_MIGRATION.md  index.html  script.js  serve.py  styles.css
electron-app/: BUILD.md  QUICKSTART.md  README.md  package-lock.json  package.json  start-ui.sh  start.sh
shell-scripts/: com.cloneai.wakeup.plist  install-autostart.sh  setup-clai.sh  start-on-wake.sh
tests/: README.md  test_advanced_email_features.py  test_auto_workflow.py  test_document_commands.py  test_dynamic_generation.py  test_email_extended.py  test_logging.py  test_mail_parsing.py  test_new_commands.py  test_new_commands.py.backup  test_system_detection.py  test_tiered_architecture.py  (+3 more)
(+67 files in other folders)
